--- a/src/css/print-preview.css
+++ b/src/css/print-preview.css
@@ -7,7 +7,7 @@
     width: 794px;
     box-shadow: 0 0 20px #000;
         -moz-box-shadow: 0 0 20px #000;
-    	-webkit-box-shadow: 0 0 10px #000;
+        -webkit-box-shadow: 0 0 10px #000;
 }
 
 #print-modal-content {
@@ -23,7 +23,7 @@
     border-radius: 8px;
         -webkit-border-radius: 8px;
         -moz-border-radius: 8px;
-    top: 15px;
+    top: 10px;
     left: 50%;
     margin: 0 0 0 -81px;
     position: fixed;
@@ -32,13 +32,16 @@
 }
 
     #print-modal-controls a {
-        color: #FFF;
+        /*color: #FFF;*/
+        color: #000;
         display: block;
         float: left;
         height: 32px;
         text-decoration: none;
-        text-indent: -999em;
-        width: 80px;
+        /*text-indent: -999em;
+        width: 80px;*/    
+        padding: 9px 15px 0 50px;
+        font-weight: bold;
     }
     
     #print-modal-controls a:hover {
@@ -46,8 +49,17 @@
     }
     
     #print-modal-controls a.print {
-        background: url(images/icon-print.png) no-repeat 50% 50%;
+        background: url(images/icon-print.png) no-repeat 10px 50%;
     }
     #print-modal-controls a.close {
-        background: url(images/icon-close.png) no-repeat 50% 50%;
+        background: url(images/icon-close.png) no-repeat 10px 50%;
+    }
+
+    #print-modal-controls h5 
+    {
+        text-align: center;    
+        font-size: 18px;
+        margin: 0 15px;
+        padding-bottom: 5px;
+        border-bottom: 1px solid #CCCCCC;
     }
